tests/error/type_errors/or_not_bool_left.err
Error: Not truthy (at $FILE:12:11)
   | 
10 | @guppy(module)
11 | def foo(x: NonBool, y: bool) -> bool:
12 |     return x or y
   |            ^ Expression of type `NonBool` is not truthy

Help: Implement missing method: `__bool__: NonBool -> bool`

Guppy compilation failed due to 1 previous error
